test_service/test-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    app: test-deploy
  ports:
    - port: 80
      targetPort: 5000
